<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/nav_events_home"
        android:title="Home"/>
    <item
        android:id="@+id/nav_create_event"
        android:title="Create Event"/>
    <item
        android:id="@+id/nav_all_events"
        android:title="All Events"/>
    <item
        android:id="@+id/nav_profile"
        android:title="Profile"/>
    <item
        android:id="@+id/nav_my_waiting_lists"
        android:title="My Waiting Lists"/>

    <item
        android:id="@+id/nav_notifications"
        android:title="Notifications"/>
    <item
        android:id="@+id/nav_manage_profiles"
        android:title="Manage Profiles"/>
    <item
        android:id="@+id/nav_admin_notification_logs"
        android:title="Notification Logs"/>
    <item
        android:id="@+id/nav_lottery_description"
        android:title="How It Works"/>
    <item
        android:id="@+id/nav_logout"
        android:title="Logout"/>

</menu>

